@@ -2,125 +2,118 @@ package uz.nt.uzumproject.service;
 
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
-import uz.nt.uzumproject.dto.ErrorDto;
 import uz.nt.uzumproject.dto.ProductDto;
 import uz.nt.uzumproject.dto.ResponseDto;
+import uz.nt.uzumproject.model.Product;
 import uz.nt.uzumproject.repository.ProductRepository;
 import uz.nt.uzumproject.service.mapper.ProductMapper;
-import uz.nt.uzumproject.service.validator.ProductValidator;
-import uz.nt.uzumproject.model.Product;
+import uz.nt.uzumproject.service.validator.AppStatusCodes;
+import uz.nt.uzumproject.service.validator.AppStatusMessages;
 
 import java.util.List;
 import java.util.Optional;
 import java.util.stream.Collectors;
 
-import static uz.nt.uzumproject.service.validator.AppStatusCodes.*;
 import static uz.nt.uzumproject.service.validator.AppStatusMessages.*;
+import static uz.nt.uzumproject.service.validator.AppStatusCodes.*;
 
 @Service
 @RequiredArgsConstructor
 public class ProductService {
+    public final ProductRepository repository;
+    private final ProductMapper mapper;
 
-    private final ProductRepository productRepository;
-    private final ProductValidator productValidator;
-    private final ProductMapper productMapper;
-
-    public ResponseDto<ProductDto> addProduct(ProductDto productDto) {
-        List<ErrorDto> errors = productValidator.validateProduct(productDto);
-
-        if (!errors.isEmpty()){
-            return ResponseDto.<ProductDto>builder()
-                    .errors(errors)
-                    .data(productDto)
-                    .message(VALIDATION_ERROR)
-                    .code(VALIDATION_ERROR_CODE)
-                    .success(false)
-                    .build();
-        }
-
-        Product product = productMapper.toEntity(productDto);
-
-        productRepository.save(product);
-
+    public ResponseDto<ProductDto> add(ProductDto productDto) {
+        productDto.setId(null);
+        Product product = repository.save(mapper.toEntity(productDto));
         return ResponseDto.<ProductDto>builder()
+                .message(OK)
+                .code(OK_CODE)
                 .success(true)
-                .code(0)
-                .data(productMapper.toDto(product))
-                .message("OK")
+                .data(mapper.toDto(product))
                 .build();
     }
 
-    public ResponseDto<ProductDto> updateProduct(ProductDto productDto) {
+
+    public ResponseDto<ProductDto> edit(ProductDto productDto) {
         if (productDto.getId() == null) {
             return ResponseDto.<ProductDto>builder()
-                    .message("Product ID is null")
-                    .code(-2)
+                    .message(AppStatusMessages.VALIDATION_ERROR)
+                    .code(AppStatusCodes.VALIDATION_ERROR_CODE)
+                    .data(productDto)
                     .build();
         }
-
-        Optional<Product> optional = productRepository.findById(productDto.getId());
-
+        Optional<Product> optional = repository.findFirstById(productDto.getId());
         if (optional.isEmpty()) {
             return ResponseDto.<ProductDto>builder()
-                    .code(NOT_FOUND_ERROR_CODE)
-                    .message(NOT_FOUND)
+                    .message(AppStatusMessages.NOT_FOUND)
+                    .code(AppStatusCodes.NOT_FOUND_CODE)
+                    .data(productDto)
+                    .build();
+        } else if (productDto.getAmount() < 0) {
+            return ResponseDto.<ProductDto>builder()
+                    .message(AppStatusMessages.VALIDATION_ERROR)
+                    .code(AppStatusCodes.VALIDATION_ERROR_CODE)
+                    .data(productDto)
                     .build();
         }
 
-        Product product = optional.get();
+        ProductDto product = new ProductDto();
+
+        product.setId(optional.get().getId());
 
         if (productDto.getName() != null) {
-            product.setName(productDto.getName());
+            product.setName(product.getName());
         }
-        if (productDto.getPrice() != null && productDto.getPrice() > 0) {
-            product.setPrice(productDto.getPrice());
+        if (productDto.getPrice() != null) {
+            product.setPrice(product.getPrice());
         }
-        if (productDto.getAmount() != null && productDto.getAmount() > 0) {
-            product.setIsAvailable(true);
-            product.setAmount(productDto.getAmount());
+        if (productDto.getAmount() != null) {
+            product.setAmount(product.getAmount());
         }
         if (productDto.getDescription() != null) {
-            product.setDescription(productDto.getDescription());
+            product.setDescription(product.getDescription());
+        }
+        if (productDto.getImageUrl() != null) {
+            product.setImageUrl(product.getImageUrl());
+        }
+        if ((productDto.getAmount() != null && productDto.getAmount() > 0) || product.getAmount() > 0) {
+            product.setIsAvailable(true);
         }
 
         try {
 
-            productRepository.save(product);
-
             return ResponseDto.<ProductDto>builder()
-                    .message(OK)
-                    .code(OK_CODE)
-                    .data(productMapper.toDto(product))
                     .success(true)
+                    .code(OK_CODE)
+                    .message(OK)
+                    .data(mapper.toDto(repository.save(mapper.toEntity(productDto))))
                     .build();
         } catch (Exception e) {
             return ResponseDto.<ProductDto>builder()
-                    .message(DATABASE_ERROR + ": " + e.getMessage())
-                    .code(DATABASE_ERROR_CODE)
+                    .code(AppStatusCodes.DATABASE_ERROR_CODE)
+                    .message(AppStatusMessages.DATABASE_ERROR)
                     .build();
         }
     }
 
-    public ResponseDto<List<ProductDto>> getAllProducts() {
+
+    public ResponseDto<List<ProductDto>> get() {
         return ResponseDto.<List<ProductDto>>builder()
-                .message(OK)
-                .code(OK_CODE)
                 .success(true)
-                .data( productRepository.findAll().stream().map(productMapper::toDto).collect(Collectors.toList()))
+                .code(OK_CODE)
+                .message(OK)
+                .data(repository.findByIsAvailable(true).stream().map(mapper::toDto).toList())
                 .build();
     }
-    public ResponseDto<ProductDto> getProductById(Integer id) {
-        return productRepository.findById(id)
-                .map(products -> ResponseDto.<ProductDto>builder()
-                        .data(productMapper.toDto(products))
-                        .success(true)
-                        .code(OK_CODE)
-                        .message(OK)
-                        .build())
-                .orElse(ResponseDto.<ProductDto>builder()
-                        .message(NOT_FOUND)
-                        .code(NOT_FOUND_ERROR_CODE)
-                        .build()
-                );
+
+    public ResponseDto<List<ProductDto>> getByCategoryId(Integer id) {
+        List<Product> products = repository.findByCategoryId(id);
+        return ResponseDto.<List<ProductDto>>builder()
+                .code(products.size() == 0 ? NOT_FOUND_CODE : OK_CODE)
+                .message(products.size() == 0 ? NOT_FOUND : OK)
+                .success(products.size() > 0)
+                .data(products.stream().map(mapper::toDto).collect(Collectors.toList()))
+                .build();
     }
 }
